		  UTF-8 byte count to determine whether the keyword is allowed or not.
		* Use actual page size in mmap calls instead of a randomly selected
		  number.

	Greek:
		* Part number is now an extra column in the download list
		* Improvements to preferences dialogs
		* Redesign skin selection

	jolz:
		* Fixed file locking between ed2k and aMule on Windows

	Kry:
		* Fix indexes after removing GUI items
		* Resolve MSVC compilation problem with separate strings in GUI
		* Fixes to Windows build
		* Allow compilation with wxCocoa
		* Replace Color.h by new class implementation MuleColour
		* Lower class overhead and use two-level cache for pens/brushes
		* Added aMuleCMD project for MSVC.
		* Fixed UnitTests and aMuleCMD in MSVC to use _CONSOLE subsystem.
		* Preferences changes

	lfroen:
		* php prefix for lex/yacc

	LittleAbacus:
		* Search results can now be sorted by "knownness" state.

	marcell:
		* Fixed issue #892: Show data sizes >= 1.0 GB with three digits.
		* Fixed search 'Stop' button not stopping Kad searches.
		* Check Kademlia search results against original criteria.
		* Allow Kademlia searches with repetitive keywords.
		* Allow adding current chat partner to friend list from tab's context menu.
		* Allow not downloading files via HTTP if the requested file is not newer.

	morph:
		* Patch to uniform and fix minor errors on man pages

	myth:
		* Feedback from shared files - add number of clients on queue.

	Skolnick:
		* Fixed autogen.sh for Bourne Shell

	Stu Redman:
		* Sort source list on opening and add file name to A4AF files
		* MSVC: optional GeoIP support
		* Faster progress bars with less overhead (without pens/brushes)
		* Show log messages in remote gui
		* More info in the Kad tab
		* Improved gaplist performance
		* Ported chat captchas (receive and send) 
		  and "Advanced Chat Spam Filter" from eMule
		* Allow download of multiple search results if search list 
		  is sorted by status (thanks to DarkNRG)